--- a/app/src/main/res/layout/activity_update_reminder.xml
+++ b/app/src/main/res/layout/activity_update_reminder.xml
@@ -53,6 +53,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />
 
+    <EditText
+        android:id="@+id/editTextAfterRemindMin"
+        android:layout_width="390dp"
+        android:layout_height="65dp"
+        android:layout_marginTop="64dp"
+        android:drawableRight="@android:drawable/ic_menu_upload"
+        android:focusable="false"
+        android:hint="Hatırlatma Bildirimi Zamanı"
+        android:textColorHint="#808080"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.333"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />
+
     <Button
         android:id="@+id/buttonUpdate"
         android:layout_width="wrap_content"
