--- a/app/src/main/res/menu/menu_list_reminder.xml
+++ b/app/src/main/res/menu/menu_list_reminder.xml
@@ -4,4 +4,8 @@
         android:title="Anasayfaya Dön"
         android:orderInCategory="100"
         app:showAsAction="never" />
+    <item android:id="@+id/action_add_reminder"
+        android:title="Hatırlatıcı Ekle"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
 </menu>
